--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,13 @@
   color: #61dafb;
 }
 
+/* searchbar */
+.input-group.md-form.form-sm.form-1 input {
+  border: 1px solid #bdbdbd;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
