--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,12 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.home {
+  height: 100vh;
+  background-image: url("./images/NewsIcon.png");
 }
 
+.collections {
+  height: 100vh;
+  background-image: url("./images/ManReading.jpg");
+}
+
+.card {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  height: 130px;
+  width: 80px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +34,13 @@
   color: #61dafb;
 }
 
-/* searchbar */
-.input-group.md-form.form-sm.form-1 input {
-  border: 1px solid #bdbdbd;
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+/*Search bar */
+
+.NavBar {
+  text-align: right;
+  list-style-type: none;
+  margin: 10px;
+  padding: 0;
 }
 
 @keyframes App-logo-spin {
