--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .home {
-  height: 100vh;
-  background-image: url("./images/NewsIcon.png");
+  height: 100%;
+  width: 100%;
+  background-color: white;
 }
 
 .collections {
@@ -12,14 +13,6 @@
   background-image: url("./images/ManReading.jpg");
 }
 
-.card {
-  /* display: inline-block; */
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  height: 130px;
-  width: 80px;
-}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -34,20 +27,59 @@
 .App-link {
   color: #61dafb;
 }
-.card-group {
+.h1 {
+  opacity: 100;
+}
+
+.card-group-local {
+  border-radius: 25px;
+  border: 2px solid rgb(255, 253, 223);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  border: 5px solid FFFDDF;
+  flex-flow: row wrap;
+  display: flex;
+  flex-direction: row;
+  font-size: 12px;
+  margin: 20px 20px 10px 20px;
+}
+.card-local {
+  align-items: center;
+  text-align: center;
+  /* justify-content: center; */
+  height: 100%;
+  min-height: 280px;
+  width: 20vw;
+  background-image: url("./images/news-icon.jpg");
+  /* opacity: 0.5; */
+  /* z-index: -1; */
+  background: rgba(255, 249, 192, 0.7);
+  background-color: white;
+  background-size: 180px;
+  padding: 5px;
+  margin: 10px 5px 5px 10px;
+  border: 1px solid gray;
+  /* border-radius: 25px; */
+  box-shadow: 3px 3px 10px grey;
 }
 
+.card-footer-local {
+  /* display: flex;
+  align-self: flex-end;
+  background-color: black; */
+  /* justify-content: space-between; */
+}
 /*Search bar */
 
 .NavBar {
   text-align: right;
   list-style-type: none;
-  margin: 10px;
   padding: 0;
+  margin: 0px 20px;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-image: url("./images/logo_transparent.png");
 }
 
 @keyframes App-logo-spin {
