--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,17 @@
-.body {
-  color: bisque;
+body {
+  background-color: #ffffff;
+}
+
+h4 {
+font-size: 16px;
+}
+
+button {
+  margin: 10px;
+  background-color: #FFFDDF !important; 
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  font-family: 'Courier', 'monospace';
 }
 
 .App {
@@ -9,7 +21,6 @@
 .home {
   height: 100%;
   width: 100%;
-  background-color: white;
 }
 
 .collections {
@@ -33,12 +44,31 @@
 }
 
 .card-group-local {
-  background-color: bisque;
-  height: -webkit-fill-available;
+  background-color: #FFFDDF;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .card-local {
   background-color: white;
+  width: 15%;
+  height: 200px;
+  margin: 1%;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px RGBA(140,140,140,1);
+}
+.card-local:hover{ 
+  width: 16%;
+}
+
+.card-footer-local {
+  display: inline-flex;
+  flex-direction: column-reverse;
+  align-self: flex-end;
 }
 /* 
 * {
