--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@ font-size: 16px;
 }
 
 button {
-  margin: 10px;
+  margin: 0px 10px;
   background-color: #FFFDDF !important; 
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
