--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@ font-size: 16px;
 }
 
 button {
-  margin: 0px 10px;
+  margin: 5px 10px;
   background-color: #FFFDDF !important; 
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
@@ -55,11 +55,16 @@ button {
 .card-local {
   background-color: white;
   width: 15%;
+  min-width: 200px;
   height: 200px;
   margin: 1%;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px RGBA(140,140,140,1);
+
+
+  flex-wrap: wrap;
+  flex-flow: row wrap;
 }
 .card-local:hover{ 
   width: 16%;
