--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,14 @@
+* {
+  font-family: 'Courier', 'monospace';
+}
+
 body {
   background-color: #ffffff;
 }
 
 h4 {
 font-size: 16px;
+font-family: 'Courier', 'monospace';
 }
 
 button {
@@ -12,6 +17,10 @@ button {
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
   font-family: 'Courier', 'monospace';
+}
+
+button:hover {
+  background-color: #fffeee !important; 
 }
 
 .App {
@@ -43,7 +52,8 @@ button {
   color: #61dafb;
 }
 
-.card-group-local {
+.card-group-local, .folder-group {
+  padding: 20px;
   background-color: #FFFDDF;
   display: flex;
   flex-direction: row;
@@ -52,28 +62,49 @@ button {
   justify-content: center;
 }
 
-.card-local {
+.card-local .single-folder {
   background-color: white;
   width: 15%;
   min-width: 200px;
-  height: 200px;
+  min-height: 200px;
   margin: 1%;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px RGBA(140,140,140,1);
+  box-shadow: 0px 0px 10px RGBA(140,140,140,0.3);
 
 
   flex-wrap: wrap;
   flex-flow: row wrap;
 }
 .card-local:hover{ 
-  width: 16%;
+  box-shadow: 0px 0px 10px RGBA(140,140,140,0.7);
 }
 
 .card-footer-local {
-  display: inline-flex;
+  font-size: 14px;
+  display: flex;
   flex-direction: column-reverse;
   align-self: flex-end;
+}
+
+.footer-body {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 10px RGBA(140,140,140,0.3);
+}
+
+.footer-contents {
+  background-color: #ffffff;
+  padding: 50px 18%;
+}
+
+.imprint {
+  text-align: left;
+  list-style: none;
+  font-size: 12px;
+}
+.imprint-title {
+  font-weight: 700;
+  text-decoration: underline;
 }
 /* 
 * {
