--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,7 +52,7 @@ button:hover {
   color: #61dafb;
 }
 
-.card-group-local, .folder-group {
+.card-group-local{
   padding: 20px;
   background-color: #FFFDDF;
   display: flex;
@@ -62,7 +62,7 @@ button:hover {
   justify-content: center;
 }
 
-.card-local .single-folder {
+.card-local {
   background-color: white;
   width: 15%;
   min-width: 200px;
@@ -106,217 +106,9 @@ button:hover {
   font-weight: 700;
   text-decoration: underline;
 }
-/* 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-image: linear-gradient(to right, regal-blue, san-juan);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
-  font-family: open-sans;
-}
-
-a {
-  text-decoration: none;
-}
-
-h1 {
-  font-family: open-sans;
-  font-weight: 300;
-}
-
-.row {
-  max-width: 900px;
-  margin: 50px auto 0;
-}
-
-.card {
-  float: left;
-  padding: 0 1.7rem;
-  width: 50%;
-  .menu-content {
-    @include cf;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    li {
-      display: inline-block;
-    }
-    a {
-      color: white;
-    }
-    span {
-      position: absolute;
-      left: 50%;
-      top: 0;
-      font-size: 10px;
-      font-weight: 700;
-      font-family: 'Open Sans';
-      transform: translate(-50%, 0);
-    }
-  }
-  .wrapper {
-    background-color: white;
-    min-height: 540px;
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0 19px 38px rgba(black, 0.3), 0 15px 12px rgba(black, 0.2);
-    &:hover {
-      .data {
-        transform: translateY(0);
-      }
-    }
-  }
-  .data {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    transform: translateY(calc(70px + 1em));
-    transition: transform 0.3s;
-    .content {
-      padding: 1em;
-      position: relative;
-      z-index: 1;
-    }
-  }
-  .author {
-    font-size: 12px;
-  }
-  .title {
-    margin-top: 10px;
-  }
-  .text {
-    height: 70px;
-    margin: 0;
-  }
-  input[type='checkbox'] {
-    display: none;
-  }
-  input[type='checkbox']:checked + .menu-content {
-    transform: translateY(-60px);
-  }
-}
-
-  .wrapper {
-    background: url(https://images.unsplash.com/photo-1496979551903-46e46589a88b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cda12b505afa1beb06e49d89014cbd65&auto=format&fit=crop&w=634&q=80) 20% 1% / cover no-repeat;
-  }
-  .content {
-    background-color: white;
-    box-shadow: 0 5px 30px 10px rgba(black, 0.3);
-  }
-  .title {
-    a {
-      color: lighten(black, 50%);
-    }
-  }
-  .menu-button {
-    position: absolute;
-    z-index: 999;
-    top: 16px;
-    right: 16px;
-    width: 25px;
-    text-align: center;
-    cursor: pointer;
-    span {
-      width: 5px;
-      height: 5px;
-      background-color: lighten(black, 50%);
-      color: lighten(black, 50%);
-      position: relative;
-      display: inline-block;
-      border-radius: 50%;
-      &::after,
-      &::before {
-        content: '';
-        display: block;
-        width: 5px;
-        height: 5px;
-        background-color: currentColor;
-        position: absolute;
-        border-radius: 50%;
-      }
-      &::before {
-        left: -10px;
-      }
-      &::after {
-        right: -10px;
-      }
-    }
-  }
-  .menu-content {
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: -1;
-    transition: transform 0.3s;
-    transform: translateY(0);
-    li {
-      width: 33.333333%;
-      float: left;
-      background-color: $bermuda;
-      height: 60px;
-      position: relative;
-    }
-    a {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 24px;
-    }
-    span {
-      top: -10px;
-    }
-  } */
-
-/* .h1 {
-  opacity: 100;
-}
-
-.card-group-local {
-  border-radius: 25px;
-  border: 2px solid rgb(255, 253, 223);
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  flex-flow: row wrap;
-  display: flex;
-  flex-direction: row;
-  font-size: 12px;
-  margin: 20px 20px 10px 20px;
-}
-.card-local {
-  /* align-items: center;
-  text-align: center;
-  /* justify-content: center; */
-  /* height: 100%;
-  min-height: 280px;
-  width: 20vw;
-  background-image: url("./images/news-icon.jpg"); */
-  /* opacity: 0.5; */
-  /* z-index: -1; */
-  /* background: rgba(255, 249, 192, 0.7);
-  background-color: white;
-  background-size: 180px; */
-  /* padding: 5px;
-  margin: 10px 5px 5px 10px;
-  border: 1px solid gray; */
-  /* border-radius: 25px; */
-  /* box-shadow: 3px 3px 10px grey; */
-/* }
-
-/* .card-footer-local { */
-  /* display: flex;
-  align-self: flex-end;
-  background-color: black; */
-  /* justify-content: space-between; */
-/* }
-/* Search bar */
+.folder-group {
+  background-color: #FFFDDF;
+}/* Search bar */
 
 .NavBar {
   text-align: right;
