--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,12 +11,28 @@ h4 {
   font-family: "Courier", "monospace";
 }
 
+.dropdown-basic-button {
+  border-radius: 30px;
+  border: 2px solid rgb(255, 227, 223);
+  font: black;
+}
+
 button {
   margin: 5px 10px;
   background-color: #fffddf !important;
-  border-radius: 5px;
-  padding: 5px 10px 5px 10px;
+  border-radius: 30px;
+  border: 2px solid rgb(255, 227, 223);
+  /* border-radius: 5px; */
+  padding: 5px 7px 5px 7px;
   font-family: "Courier", "monospace";
+}
+
+.btn-primary {
+  color: black;
+  border: 2px solid rgb(255, 227, 223);
+  border-radius: 30px;
+  font-family: "Courier", "monospace";
+  font-size: 14px !important;
 }
 
 button:hover {
@@ -32,22 +48,27 @@ button:hover {
   width: 100%;
 }
 
-.NavBar {
+.navbar {
   text-align: right;
-  padding: 10px;
   margin: 0px 20px;
-  font-size: 12px;
+  font-size: 16px;
   text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
 }
 
 .NavBar a {
   padding: 10px;
 }
 
-.brand-logo {
-  background-image: url("./images/logo_transparent.png");
-  width: 50px;
-  height: 100%;
+.input-group {
+  display: flex;
+  justify-content: center;
+}
+
+.search-input {
+  width: 70%;
+  height: 35px;
 }
 
 .App-header {
@@ -68,6 +89,8 @@ button:hover {
 .card-group-local {
   padding: 20px;
   background-color: #fffddf;
+  border-radius: 50px;
+  border: 2px solid rgb(255, 227, 223);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -77,6 +100,8 @@ button:hover {
 
 .card-local {
   background-color: white;
+  border-radius: 30px;
+  border: 2px solid rgb(255, 227, 223);
   width: 15%;
   min-width: 200px;
   min-height: 200px;
@@ -106,7 +131,7 @@ button:hover {
 
 .footer-contents {
   background-color: #ffffff;
-  padding: 50px 18%;
+  padding: 10px 18%;
 }
 
 .imprint {
