--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,14 @@ h4 {
   font-family: "Courier", "monospace";
 }
 
+a {
+  color: black;
+}
+
+a:hover {
+  background-color: rgb(255, 227, 223) !important;
+}
+
 .dropdown-basic-button {
   border-radius: 30px;
   border: 2px solid rgb(255, 227, 223);
@@ -23,7 +31,7 @@ button {
   border-radius: 30px;
   border: 2px solid rgb(255, 227, 223);
   /* border-radius: 5px; */
-  padding: 5px 7px 5px 7px;
+  padding: 1px 5px;
   font-family: "Courier", "monospace";
 }
 
@@ -37,6 +45,24 @@ button {
 
 button:hover {
   background-color: #fffeee !important;
+}
+
+.dropdown-menu-show {
+  display: block;
+  font-size: small;
+}
+
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
 }
 
 .App {
@@ -64,6 +90,9 @@ button:hover {
 .input-group {
   display: flex;
   justify-content: center;
+  border: 2px solid rgb(255, 227, 223);
+  border-radius: 30px;
+  padding: 16px 1px 1px 1px;
 }
 
 .search-input {
