--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,46 @@ h4 {
   font-family: "Courier", "monospace";
 }
 
+/*navbar title*/
+
+.typewriter {
+  font-family: Courier, monospace;
+  display: inline-block;
+}
+
+.typewriter-text {
+  display: inline-block;
+  overflow: hidden;
+  text-align: center;
+  letter-spacing: 2px;
+  animation: typing 5s steps(30, end), blink 0.75s step-end infinite;
+  white-space: nowrap;
+  font-size: 30px;
+  font-weight: 500;
+  border-right: 4px solid rgb(255, 227, 223);
+  box-sizing: border-box;
+}
+
+@keyframes typing {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(255, 227, 223);
+  }
+}
+
+/**/
 a {
   color: black;
 }
